Fix login issues

--- a/app/views/access/login.html.erb
+++ b/app/views/access/login.html.erb
@@ -13,7 +13,7 @@
 			<%= submit_tag("Sign in", :class => "btn danger") %>
 		<% end %>
 			<div id="bottom">
-			<small>Forgot your password?</small> 
-			<small id="not_a_member">Not a member? <%= link_to("Register!", :action => "new", :controller => "user") %></small>
+			<small>Forgot your password?</small>
+			<small id="not_a_member">Not a member? <%= link_to("Register!", :action => "new", :controller => "users") %></small>
 		</div>
 	</div>
