--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,8 +35,8 @@ h2 span{
 }
 
 .hero-unit{
-	border-radius: 0;
-	padding-bottom: 13px;
+	//border-radius: 0;
+	//padding-bottom: 13px;
 }
 .content{
 	padding:  0 20px 20px;
@@ -45,7 +45,7 @@ h2 span{
 	box-shadow: 0px 1px 1px #444;
 }
 .row{
-	margin-left: -20px;
+	//margin-left: -20px;
 }
 
 h1,h2,h3,h4{
